// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button/> should render 1`] = `
<DocumentFragment>
  <div
    class="sc-8aef3792-0 hEnGAh"
    width="150"
  >
    <button
      class="sc-8aef3792-1 clusxS"
      color="var(--text)"
      font-size="24"
      height="50"
      width="150"
    >
      <div
        class="sc-8aef3792-2 eHSqWx"
      >
        <div
          class="sc-8aef3792-4 joyQLY"
        >
          Test
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`<Button/> should render in loading state 1`] = `
<DocumentFragment>
  <div
    class="sc-8aef3792-0 earFKh loading"
  >
    <button
      class="sc-8aef3792-1 jtJyrv loading"
      color="var(--text)"
      disabled=""
      font-size="24"
    >
      <div
        class="sc-8aef3792-2 eHSqWx"
      >
        <div
          class="sc-8aef3792-3 cynJoB loading"
        >
          <div
            class="sc-4731ba6b-0 cnZVOU loader"
            color="var(--text)"
          />
        </div>
        <div
          class="sc-8aef3792-4 joyQLY loading"
        >
          Test
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`<Button/> should render with custom props 1`] = `
<DocumentFragment>
  <div
    class="sc-8aef3792-0 dQsYlv"
  >
    <button
      class="sc-8aef3792-1 kgyigc"
      color="red"
      font-size="12"
    >
      <div
        class="sc-8aef3792-2 eHSqWx"
      >
        <div
          class="sc-8aef3792-4 joyQLY"
        >
          Test
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;
